--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
-					<a href="index.html" class="logo">Home</a>
+					<a href="index.html" class="logo"></a>
 					<nav id="nav">
+						<a href="index.html">Home</a>
 						<a href="#about">About Me</a>
 						<a href="#research">Research</a>
 						<!-- <a href="misc/cv_rion.pdf">CV</a> -->
@@ -102,7 +103,7 @@
 						</div>
 						<div class="6u$ 12u$(medium)">
 							<blockquote >
-								I am a PhD researcher in Astrophysics at Newcastle University. My work looks at how relativistic particles affect galactic winds and outflows, and how feedback from bright AGN shows up in both thermal and non-thermal observations. I am especially interested in the link between AGN obscuration and radio emission. Before this, I did my Master’s in Physics at NISER, where I worked on estimating magnetic fields in galaxies using a few observable inputs. I enjoy teaching, explaining things in a straightforward way, and looking at problems from different angles. I am from Mangalore, India.						</div>				
+								I am interested in how supermassive black holes shape the galaxies they live in. My research uses computer simulations to explore how powerful winds launched by black holes interact with the surrounding gas, affecting how galaxies grow, form stars, and produce signals that astronomers can observe. Before starting my PhD, I completed my master’s in physics at NISER, Bhubaneswar, India, where I studied magnetic fields in galaxies. I am originally from Mangalore, India.				</div>				
 					</div>
 				</div>
 			</section>
@@ -125,7 +126,7 @@
 							</header>
 							<p>
 								<br>
-								Currently, I am using numerical MHD simulations with cosmic-ray transport physics to predict observational signatures of non-thermal emissions in quasars.
+								Currently, I am using numerical MHD simulations (using a code called AREPO) with cosmic-ray transport physics to predict observational signatures of non-thermal emissions in quasars.
 								<br>
 								<br>
 								Stay tuned for updates!								
@@ -214,6 +215,7 @@
 						</p>
 						<p class="contact-location">Newcastle University · Newcastle upon Tyne, UK</p>
 						<ul class="contact-icons">
+							<li><a href="https://scholar.google.com/citations?user=Z91IGS0AAAAJ&hl=en" class="icon fa-graduation-cap" target="_blank" rel="noopener noreferrer"><span class="label">Google Scholar</span></a></li>
 							<li><a href="https://github.com/Rnazx" class="icon fa-github" target="_blank" rel="noopener noreferrer"><span class="label">GitHub</span></a></li>
 							<li><a href="https://linkedin.com/in/riong" class="icon fa-linkedin" target="_blank" rel="noopener noreferrer"><span class="label">LinkedIn</span></a></li>
 						</ul>
