--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 						</div>
 						<div class="6u$ 12u$(medium)">
 							<blockquote >
-								I am interested in how supermassive black holes shape the galaxies they live in. My research uses computer simulations to explore how powerful winds launched by black holes interact with the surrounding gas, affecting how galaxies grow, form stars, and produce signals that astronomers can observe. Before starting my PhD, I completed my master’s in physics at NISER, Bhubaneswar, India, where I studied magnetic fields in galaxies. I am originally from Mangalore, India.				</div>				
+								I am PhD student at Newcastle University studying how supermassive black holes shape the galaxies they live in. My research uses computer simulations to explore how powerful winds launched by black holes interact with the surrounding gas, affecting how galaxies grow, form stars, and produce signals that astronomers can observe. Before starting my PhD, I completed my master’s in physics at NISER, Bhubaneswar, India, where I studied magnetic fields in galaxies. I am originally from Mangalore, India.				</div>				
 					</div>
 				</div>
 			</section>
