changes to current project

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 							</header>
 							<p>
 								<br>
-								Currently, I am using numerical MHD simulations (using a code called AREPO) with cosmic-ray transport physics to predict observational signatures of non-thermal emissions in quasars.
+								Currently, I am working on probing the impact of relativistic particles on galactic outflows and the thermal and non-thermal observational signatures of feedback in bright AGN. In particular, I am interested in understanding the observed link between AGN obscuration and radio emission.
 								<br>
 								<br>
 								Stay tuned for updates!								
