changes to ml project

--- a/index.html
+++ b/index.html
@@ -174,9 +174,9 @@
 								<h3>Lineaments on the Surface of Europa</h3>
 							</header>
 							<p>
-								• Three different models were trained using a data set created using different annotating techniques.
 								<br>
-								• A novel model was proposed which combined two different techniques in Machine learning (CNNs and random forests).
+								During my master's research, I developed machine learning models to identify and predict linear geological features (lineaments) on Europa's surface—a crucial step in searching for potential biosignatures in spectral data from these regions. I trained multiple models using datasets created with different annotation techniques and proposed a novel hybrid approach that combines convolutional neural networks with random forest algorithms.
+								<br>
 								<!-- <br>
 								• This work was presented in Lunar and Planetary Science Conference (LPSC) and the Indian Planetary Science Conference
 								(IPSC). -->
