--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 		<title>Rion Glenn Nazareth</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<link rel="icon" type="image/svg+xml" href="favicon.svg" />
-		<link rel="alternate icon" href="favicon.svg" />
+		<link rel="icon" type="image/jpeg" href="images/agn.jpg" />
+		<link rel="alternate icon" href="images/agn.jpg" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<link rel="stylesheet" href="assets/css/minimal.css" />
 	</head>
@@ -144,7 +144,10 @@
 							</header>
 							<p>
 								<br>
-								Many spiral galaxies host magnetic fields with energy densities comparable to those of the turbulent and thermal motions of their interstellar gas. These magnetic fields confine cosmic rays and affect the structure and dynamics of the interstellar medium. Galactic magnetic field models have generally relied on certain microphysical parameters that are challenging to constrain. We address this problem, by developing a new framework that uses observable quantities as input: the galaxy rotation curve, the surface densities of the gas, stars and star formation rate, and the gas temperature. Our results show that the scaling relation predictions of our model are in good agreement with the observed galaxy properties. Despite its simplicity, the inferred free-parameter values are remarkably consistent across the four nearby galaxies to which we apply the model. This consistency suggests that the model can reliably predict turbulence and magnetic-field properties in galaxies where these quantities have not yet been measured. This has direct implications on our ability to make statistical inferences on galactic magnetic fields, potentially explaining the various processes that shape them. 
+								Many spiral galaxies host magnetic fields with energy densities comparable to those of the turbulent and thermal motions of their interstellar gas. These magnetic fields confine cosmic rays and affect the structure and dynamics of the interstellar medium. Galactic magnetic field models have generally relied on certain microphysical parameters that are challenging to constrain. We address this problem, by developing a new framework that uses observable quantities as input: the galaxy rotation curve, the surface densities of the gas, stars and star formation rate, and the gas temperature. 
+								<br>
+								<br>
+								Our results show that the scaling relation predictions of our model are in good agreement with the observed galaxy properties. Despite its simplicity, the inferred free-parameter values are remarkably consistent across the four nearby galaxies to which we apply the model. This consistency suggests that the model can reliably predict turbulence and magnetic-field properties in galaxies where these quantities have not yet been measured. This has direct implications on our ability to make statistical inferences on galactic magnetic fields, potentially explaining the various processes that shape them. 
 								
 								<!-- <br>
 									— The code solves for the magnetic field resulting in a closed‑form analytical solution. This is used to calculate the relevant
